Update author; add first post; update background images

--- a/_posts/2020-07-26-365-days-of-code.md
+++ b/_posts/2020-07-26-365-days-of-code.md
@@ -6,4 +6,12 @@ date: 2020-07-26
 background: '/img/bg-index.jpg'
 ---
 
-**365 Days of Code** is an initiative to iteratively improve in coding, one day at at time.
+**365 Days of Code** is an initiative to iteratively improve in coding, one day at at time. Here are the rules:
+
+1. I must code **every day** for a full year.
+2. I can code in any language, but preferably related to Data Science. Options include:
+    1. **Data Science:** Python, SQL, Bash
+    3. **Web Development:** Javascript, HTML, CSS
+4. I must produce at least 50 lines of code per day.
+5. I must record the lines of code written in the post.
+6. The code can be written in any context e.g. projects, courses.
