--- a/_posts/2020-07-26-365-days-of-code.md
+++ b/_posts/2020-07-26-365-days-of-code.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "365 Days of Code!"
+title: "365 Days of Code"
 subtitle: "An initiative to grow as a coder, one day at a time."
 date: 2020-07-26
 background: '/img/bg-index.jpg'
