Update post link

--- a/_posts/2020-07-26-day001.md
+++ b/_posts/2020-07-26-day001.md
@@ -7,7 +7,7 @@ background: '/img/posts/databases.jpg'
 ---
 
 My current focus is on **databases**. 
-I'm currently taking the course *[SQL & PostgreSQL for Beginners: Become an SQL Expert](https://www.udemy.com/course/sql-and-postgresql-for-beginners/)* on Udemy. Today, I completed the sections from the course on the following:
+I'm currently taking the course **SQL & PostgreSQL for Beginners: Become an SQL Expert** on [Udemy](https://www.udemy.com/course/sql-and-postgresql-for-beginners/). Today, I completed the sections from the course on the following:
 
 1. Querying Data
 2. Aggregating and Grouping Data
