--- a/_posts/2020-07-26-365-days-of-code.md
+++ b/_posts/2020-07-26-365-days-of-code.md
@@ -20,7 +20,11 @@ background: '/img/bg-index.jpg'
 4. I must write a post every day to present (a) the topics covered (for courses) or project components completed (for projects), along with evidence of work done.
 5. For code:
     1. I can code in any language. Related languages are acceptable as well e.g. Javascript, HTML, CSS for web development
-    2. I must produce at least 50 lines of code per day.
+    2. I must produce at least 20 lines of code per day.
 6. For other tools:
     1. I can use any Data Science-related tool e.g. Power BI or Tableau for visualisation, Access for database applications.
     2. I must produce something tangible.
+
+If you're thinking that the criteria is easy to meet, you're absolutely right. This initiative is set up to help me make *incremental* improvements and instill the discipline of staying current in technical skills.
+
+Wish me luck!
