Update Day 3 post

--- a/_posts/2020-07-28-day003.md
+++ b/_posts/2020-07-28-day003.md
@@ -6,7 +6,7 @@ date: 2020-07-28 23:30:00 +0800
 background: '/img/posts/databases.jpg'
 ---
 
-I completed the remainder of the content (String Functions) from the course **SQL & PostgreSQL for Beginners: Become an SQL Expert** on [Udemy](https://www.udemy.com/course/sql-and-postgresql-for-beginners/), and started on a new one, **The Complete Python/PostgreSQL Course 2.0** on [Udemy](https://www.udemy.com/course/complete-python-postgresql-database-course/). I'm taking this course because I foresee that I'll be interfacing with my local PostgreSQL database through Python.
+I completed the remainder of the content (String Functions) from the course **SQL & PostgreSQL for Beginners: Become an SQL Expert** on [Udemy](https://www.udemy.com/course/sql-and-postgresql-for-beginners/), and started on a new one, **The Complete Python/PostgreSQL Course 2.0** on [Udemy](https://www.udemy.com/course/complete-python-postgresql-database-course/). I'm taking this course because I think it would be more convenient interacting with my local PostgreSQL database through Python instead of pgAdmin 4.
 
 ## String Functions
 
@@ -127,4 +127,101 @@ SELECT
 	SPLIT_PART(date_of_birth::TEXT, '-', 2)::INT as month,
 	SPLIT_PART(date_of_birth::TEXT, '-', 3)::INT as day
 FROM directors;
+```
+
+## Classes in Python
+In learning Python, I skipped all object oriented programming content because it wasn't as important for data science. As such, I did the sections that taught the basics on Python classes.
+
+### Methods
+* `instance_method`
+    * To produce an action that uses the data inside the object
+    * To call a method to modify the data inside the object
+* `class_method`
+    * Used as factories/ways to create specific types of classes (?)
+* `static_method`
+    * To place a method inside a class, mainly for code organisation
+
+```py
+# Define a class
+class Book:
+
+    # Input default types
+    TYPES = ('hardcover', 'paperback')
+
+    # Standard init
+    def __init__(self, name, book_type, weight):
+        self.name = name
+        self.book_type = book_type
+        self.weight = weight
+    
+    # __repr__ = Returns a string to allow you to recreate the object easily
+    def __repr__(self):
+        return f'<Book {self.name}, {self.book_type}, weighing {self.weight}g>'
+
+    @classmethod
+    def hardcover(cls, name, page_weight):
+        # Create new object inside of a class
+        return cls(name, cls.TYPES[0], page_weight+100)
+
+    @classmethod
+    def paperback(cls, name, page_weight):
+        return cls(name, cls.TYPES[1], page_weight)
+
+# Create hardcover book object using the class method
+hard = Book.hardcover('Harry Potter', 1500)
+
+# Create paperback book object using the class method
+light = Book.paperback('Python 101', 600)
+
+# Print
+print(hard)     # <Book Harry Potter, hardcover, weighing 1600g>
+print(light)    # <Book Python 101, paperback, weighing 600g>
+```
+
+### Class Inheritance
+```py
+# Create parent class
+class Device:
+    def __init__(self, name, connected_by):
+        self.name = name
+        self.connected_by = connected_by
+        self.connected = True
+
+    def __str__(self):
+        return f'Device {self.name!r} ({self.connected_by})'
+
+    def disconnect(self):
+        self.connected = False
+        print('Disconnected.')
+
+# Create child class
+class Printer(Device):
+    def __init__(self, name, connected_by, capacity):
+
+        # super() is used to call the parent class
+        super().__init__(name, connected_by)
+        self.capacity = capacity
+        self.remaining_pages = capacity
+
+    def __str__(self):
+        
+        # Parent class functions can be accessed
+        return f'{super().__str__()} ({self.remaining_pages} pages remaining)'
+
+    # Child class inherits the "connected" property - we did not define this
+    def print(self, pages):
+        if not self.connected:
+            print('Your printer is not connected!')
+            return
+        print(f'Printing {pages} pages.')
+        self.remaining_pages -= pages
+
+# Create printer object
+printer = Printer('Printer', 'USB', 500)
+
+# Check object
+print(printer)      # Device 'Printer' (USB) (480 pages remaining)
+
+# Print 20 pages
+printer.print(20)   # Printing 20 pages.
 ```
