Update Day 3 post

--- a/_posts/2020-07-28-day003.md
+++ b/_posts/2020-07-28-day003.md
@@ -130,7 +130,7 @@ FROM directors;
 ```
 
 ## Classes in Python
-In learning Python, I skipped all object oriented programming content because it wasn't as important for data science. As such, I did the sections that taught the basics on Python classes.
+In learning Python, I skipped all object oriented programming content because I did not find these as important for machine learning. As such, I did the sections in the Python/PostgreSQL course that taught the basics on Python classes. I don't think I have a good handle on classes just yet. I'll have to see how useful it really is in the rest of the course before learning it in greater detail.
 
 ### Methods
 * `instance_method`
