Update Day 4 post

--- a/_posts/2020-07-29-day004.md
+++ b/_posts/2020-07-29-day004.md
@@ -24,6 +24,7 @@ Running `app.py` launches the app:
 # Import required modules
 from database import create_table, add_entry, get_entries
 
+# Configure text
 menu = '''Please select one of the following options:
 1) Add new entry for today.
 2) View entries.
@@ -33,22 +34,28 @@ Your Selection: '''
 
 welcome = 'Welcome to the Programming Diary!'
 
+# User input for new entry
 def prompt_new_entry():
     entry_content = input('What have you learned today? ')
     entry_date = input('Enter the date: ')
     add_entry(entry_content, entry_date)
 
+# Print new entries
 def view_entries(entries):
     for entry in entries:
         print(f"{entry[1]}\n{entry[0]}\n\n")
 
-print(welcome)
+# Create table
 create_table()
+
+# Print welcome message
+print(welcome)
 print()
 
 user_input = '1'
 while user_input != '3':
 
+    # Get user input
     user_input = input(menu)
     print()
 
@@ -64,19 +71,23 @@ while user_input != '3':
 
 ### `database.py`
 ```py
+# Import required modules
 import sqlite3
 
+# Connect to database
 conn = sqlite3.connect('1-ProgDiary/data.db')
 
 # To get a cursor of dictionaries
 conn.row_factory = sqlite3.Row
 
+# Function to create table
 def create_table():
     conn.execute(
         'CREATE TABLE IF NOT EXISTS entries (content TEXT, date TEXT);'
     )
     conn.commit()
 
+# Function to add entry
 def add_entry(entry_content, entry_date):
 
     conn.execute(
@@ -85,6 +96,7 @@ def add_entry(entry_content, entry_date):
     )
     conn.commit()
 
+# Function to select all entries
 def get_entries():
     
     cursor = conn.execute("SELECT * FROM entries;")
