Update Day 4 post

--- a/_posts/2020-07-29-day004.md
+++ b/_posts/2020-07-29-day004.md
@@ -17,7 +17,7 @@ The app comprised two simple scripts: (see below for code)
 
 Running `app.py` launches the app:
 
-<img src="/img/posts/day004-01.png">
+<img src="365DaysOfDS/img/posts/day004-01.png">
 
 ### `app.py`
 ```py
