--- a/_posts/2020-08-02-day008.md
+++ b/_posts/2020-08-02-day008.md
@@ -18,8 +18,8 @@ Yesterday, I continued work on the automated EDA tool, writing a function for da
 
 Today, I created a simple interface for edaMAME. I wrote a simple function to display basic information about the dataset, implemented the code I wrote over the past two days for detecting data formats and measurement types, and added some graphs I typically use to analyse missingness. I also created some functions for exploring univariate data. I'll let the video do the talking:
 
-<figure class="video_container" style='width: 700px;'>
-  <video controls="true" allowfullscreen="true">
+<figure class="video_container">
+  <video controls="true" allowfullscreen="true" width="700">
     <source src="/365DaysOfDS/img/posts/streamlit-edaMAME-2020-08-02-2008.webm.mp4" type="video/mp4">
   </video>
 </figure>
