Update Day 8 post

--- a/_posts/2020-08-02-day008.md
+++ b/_posts/2020-08-02-day008.md
@@ -16,7 +16,21 @@ Streamlit had been on my radar since last year. I think of it as the Python equi
 ## Progress
 Yesterday, I continued work on the automated EDA tool, writing a function for data measurement types and merging that with the function to detect data formats (from Day 6). For ease of reference, I've decided to call the tool **edaMAME**, which stands for **Exploratory Data Analysis, Massively Automated for Me**.
 
-Today, I created a simple interface for edaMAME. I wrote a simple function to display basic information about the dataset, implemented the code I wrote over the past two days for detecting data formats and measurement types, and added some graphs I typically use to analyse missingness. I also created some functions for exploring univariate data. I'll let the video do the talking:
+Today, I created a simple interface for edaMAME. I wrote a simple function to display basic information about the dataset, implemented the code I wrote over the past two days for detecting data formats and measurement types, and added some graphs I typically use to analyse missingness. I also created some functions for exploring univariate data.
+
+I took best practices for EDA from the book, [Experimental Design and Analysis](http://www.stat.cmu.edu/~hseltman/309/Book/Book.pdf) by Howard Seltman of Carnegie Mellon University. For exploring univariate data, Seltman advised the following:
+
+For categorical data:
+
+* Tabulate the frequency and proportions of each category
+* Create bar plots to visualise the frequencies/proportions
+
+For numeric data:
+
+* Analyse central tendency, spread, skewness, and kurtosis
+* Create histograms and boxplots to visually assess the above characteristics
+
+Here's a video demo of the edaMAME platform so far:
 
 <figure class="video_container">
   <video controls="true" allowfullscreen="true" width="700">
