--- a/_posts/2020-07-28-day003.md
+++ b/_posts/2020-07-28-day003.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Day 3: PostgreSQL, Python"
-subtitle: "SQL String Functions and Python Classes"
+subtitle: "SQL String Functions; Python Classes"
 date: 2020-07-28 23:40:00 +0800
 background: '/img/posts/databases.jpg'
 ---
