--- a/_posts/2020-08-02-day008.md
+++ b/_posts/2020-08-02-day008.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Day 8: Python"
-subtitle: "Building an Automated EDA Tool in Streamlit"
+subtitle: "Building an Automated EDA Tool in Streamlit; Univariate Analysis"
 date: 2020-08-02 21:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
