Update Day 9 post

--- a/_posts/2020-08-03-day009.md
+++ b/_posts/2020-08-03-day009.md
@@ -27,21 +27,21 @@ For pairs of **numeric** features, I computed Pearson and Spearman correlation, 
 ### Categorical Features
 For pairs of **categorical** features, I computed association scores using Cramer's V, and generated a heatmap and contingency table for the frequency distribution.
 
-<img src="/365DaysOfDS/img/posts/day009/fi_cat1.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_cat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_cat2.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_cat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat1.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat2.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
 
 ### Numeric vs. Categorical Features
 For **numeric vs. categorical** pairs, I used the Kruskal-Wallis H-test and 1-way ANOVA to measure differences in median/mean across categories.
 
-<img src="/365DaysOfDS/img/posts/day009/fi_numcat1.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_numcat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_numcat2.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_numcat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat1.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat2.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
