--- a/_posts/2020-08-03-day009.md
+++ b/_posts/2020-08-03-day009.md
@@ -14,34 +14,34 @@ For bivariate analysis, I once again took reference from [Experimental Design an
 ### Numeric Features
 For pairs of **numeric** features, I computed Pearson and Spearman correlation, created scatterplots with 2D histograms, and automated the estimation of linear regression models.
 
-<img src="/365DaysOfDS/img/posts/day009/fi_num1.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_num1.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_num2.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_num2.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_num1.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_num1.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_num2.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_num2.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_num3.jpg" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_num3.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
 ### Categorical Features
 For pairs of **categorical** features, I computed association scores using Cramer's V, and generated a heatmap and contingency table for the frequency distribution.
 
-<img src="/365DaysOfDS/img/posts/day009/fi_cat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_cat1.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_cat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_cat2.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat1.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_cat2.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
 ### Numeric vs. Categorical Features
 For **numeric vs. categorical** pairs, I used the Kruskal-Wallis H-test and 1-way ANOVA to measure differences in median/mean across categories.
 
-<img src="/365DaysOfDS/img/posts/day009/fi_numcat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_numcat1.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_numcat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_numcat2.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat1.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat1.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat2.jpg" width=700 style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day009/fi_detailed_numcat2.jpg" width="700" style='margin-left: auto; margin-right: auto; display: block;'>
