Update Python technology in posts

--- a/_posts/2020-08-01-day007.md
+++ b/_posts/2020-08-01-day007.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Day 7: Python"
+title: "Day 7: Python Streamlit"
 subtitle: "Automated EDA: Detecting Data Measurement Types"
 date: 2020-08-01 20:00:00 +0800
 background: '/img/posts/ml.jpg'
