--- a/_posts/2020-07-31-day006.md
+++ b/_posts/2020-07-31-day006.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Day 6: Python"
+title: "Day 6: Python Streamlit"
 subtitle: "Automated EDA: Detecting Data Formats"
 date: 2020-07-31 20:00:00 +0800
 background: '/img/posts/ml.jpg'
