--- a/_posts/2020-08-03-day009.md
+++ b/_posts/2020-08-03-day009.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Day 9: Python"
+title: "Day 9: Python Streamlit"
 subtitle: "Automated EDA: Bivariate Analysis"
 date: 2020-08-03 23:00:00 +0800
 background: '/img/posts/ml.jpg'
