--- a/_posts/2020-08-04-day010.md
+++ b/_posts/2020-08-04-day010.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Day 10: Python"
+title: "Day 10: Python Streamlit"
 subtitle: "Refactoring of Automated EDA App"
 date: 2020-08-04 23:00:00 +0800
 background: '/img/posts/ml.jpg'
