Update Day 17 post

--- a/_posts/2020-08-11-day017.md
+++ b/_posts/2020-08-11-day017.md
@@ -6,9 +6,9 @@ date: 2020-08-11 20:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-So I realised that if I want to raise my Kaggle profile, I'll need to a whole lot more competitions, which have mostly comprised image classification tasks. At the same time, deep learning is an area that I have yet to work on, and have been putting off for some time.
+So I realised that if I want to raise my Kaggle profile, I'll need to participate in a whole lot more competitions, which have mostly been centered around image classification. At the same time, deep learning is an area that I have yet to work on, and have been putting off for some time.
 
-The work I've done so far in *365 Days of DS* seems rather random. That's because these were things that have been on my mind for the longest time - building an automated EDA app, learning Postgres, finding out what the hell Docker is, and getting soem exposure to PySpark. While that's great for breadth, it doesn't do much for depth, especially when computer vision is a big thing.
+The work I've done so far in *365 Days of DS* seems rather random. That's because these were things that have been on my mind for the longest time - building an automated EDA app, learning Postgres, finding out what the hell Docker is, and getting some exposure to PySpark. While that's great for breadth, it doesn't do much for depth, especially when computer vision is a big thing.
 
 Hence, with these in mind, I've decided to focus my efforts on **image classification**. This will make it easier for me to clock some Kaggle competitions, do some deep learning, and apply what I've learnt so far on databases, Docker, and PySpark to an actual project.
 
