Update Day 17 and Day 18 post subtitle

--- a/_posts/2020-08-11-day017.md
+++ b/_posts/2020-08-11-day017.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Day 17: Python"
-subtitle: "Imaging Processing"
+subtitle: "Image Processing"
 date: 2020-08-11 20:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
