--- a/_posts/2020-08-12-day018.md
+++ b/_posts/2020-08-12-day018.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Day 18: Python Keras"
-subtitle: "Imaging Processing"
+subtitle: "Image Processing"
 date: 2020-08-12 21:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
