Add Day 21 post

--- a/_posts/2020-08-15-day021.md
+++ b/_posts/2020-08-15-day021.md
@@ -10,7 +10,7 @@ This is a continuation of the **Complete Tensorflow 2 and Keras Deep Learning Bo
 
 Like the section on neural networks basics ([Day 19](https://chrischow.github.io/365DaysOfDS/2020/08/13/day019.html)), the theory of CNNs was not taught as well as Andrew Ng in his CNN course on [Coursera](https://www.coursera.org/learn/convolutional-neural-networks). Thankfully, the CNN course on [DataCamp](https://learn.datacamp.com/courses/image-processing-with-keras-in-python) was a good refresher. However, the code-along was great. The course went through the **Modified National Institute of Standards and Technology (MNIST) database for handwritten digits** and the **Canadian Institute For Advanced Research (CIFAR) 10 object recognition database**. These datasets are very popular and commonly-used for benchmarking. 
 
-My notes were included below:
+My notes:
 
 ## Preparing Data
 
