Add Day 25 post

--- a/_posts/2020-08-18-day024.md
+++ b/_posts/2020-08-18-day024.md
@@ -44,7 +44,7 @@ test_gen = ImageDataGenerator(
 ```
 
 ### Build Model
-I used a simple model with 4 convolutional layers:
+I used a simple model with 4 convolutional blocks:
 
 ```py
 model = Sequential()
