Update Day 28 post

--- a/_posts/2020-08-22-day028.md
+++ b/_posts/2020-08-22-day028.md
@@ -19,7 +19,7 @@ The key findings were:
 * This time, adding Conv3 layers to the earlier blocks seemed to have a better effect on both loss and accuracy than adding them in the later blocks
 
 
-## X New Variants
+## 3 New Variants
 
 ### CCCNN-19
 This variant of CCCNN-10 tests the **patience** setting for early stopping. I realised that I didn't pay much attention to the learning curves, and inspected them properly today. None of the curves followed the classic learning curve shape. Hence, I decided to increase the patience setting to see whether we are underfitting. If we are, validation loss should decrease further. If we are not, the learning curves should more closely resemble the classic curve.
