Correct MTARSI acronym

--- a/_posts/2020-08-16-day022.md
+++ b/_posts/2020-08-16-day022.md
@@ -6,7 +6,7 @@ date: 2020-08-16 23:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-I took a break from the course to consolidate my learning on Convolutional Neural Networks (CNNs). Today, I worked through another dataset to develop an image classification model, the **Multi-Type Aircraft of Remote Sensing Images (MTARSI)** dataset.
+I took a break from the course to consolidate my learning on Convolutional Neural Networks (CNNs). Today, I worked through another dataset to develop an image classification model, the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset.
 
 MTARSI contained satellite images of several transport and fighter aircraft types. However, the dataset was rather problematic. Thanks to some EDA, I discovered that there were only a handful of unique images. The dataset actually comprised a lot of simulated data - the same aircraft images superimposed on different runway textures. In addition, many fighter aircraft (F-4, F-15, F-16, and F-18) were misclassified as F-22s. Attaching the right labels took some time.
 
