--- a/_posts/2020-08-17-day023.md
+++ b/_posts/2020-08-17-day023.md
@@ -6,7 +6,7 @@ date: 2020-08-17 23:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-Today, I continued work on my image classification model on the **Multi-Type Aircraft of Remote Sensing Images (MTARSI)** dataset. I did some trial and error, and learned a few things about neural networks.
+Today, I continued work on my image classification model on the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset. I did some trial and error, and learned a few things about neural networks.
 
 ### GPU Utilisation
 When training my model, I realised that my GPU memory was fully utilised, but its utilisation was extremely low. Apparently, this was because the dataset was small, and did not require much processing.
