--- a/_posts/2020-08-18-day024.md
+++ b/_posts/2020-08-18-day024.md
@@ -6,7 +6,7 @@ date: 2020-08-18 23:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-Today, I downloaded the full **Multi-Type Aircraft of Remote Sensing Images (MTARSI)** dataset and started building a CNN with it.
+Today, I downloaded the full **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset and started building a CNN with it.
 
 ## EDA
 After looking through the dataset, I discovered that there were several mislabelled images. There were F-15s labelled as F-16s, and F-4s, F-15s, F-16s, and F-18s labelled as F-22s. I suppose the "F-22" class was supposed to be "Fighter Aircraft". Since there were sufficient images of F-15s, F-16s, F-18s and F-22s, I corrected their labels. I dropped the F-4 images since there weren't enough of them.
