--- a/_posts/2020-08-20-day026.md
+++ b/_posts/2020-08-20-day026.md
@@ -6,7 +6,7 @@ date: 2020-08-20 23:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-Today's work is a continuation of my CNN model for the **Multi-Type Aircraft of Remote Sensing Images (MTARSI)** dataset.
+Today's work is a continuation of my CNN model for the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset.
 
 ## Model 4
 I trained Model 4, which differed from Model 3 in image size (40x40 instead of 70x70) and CNN architecture. Instead of alternating Convolutional and Max Pooling layers, I created blocks, each comprising two Convolutional layers and one Max Pooling layer.Initially, I set Model 4 up with 2 blocks with 32 filters for each Convolutional layer in the first block, and 64 filters for each Convolutional layer in the second. This did not work out well - the model was not converging after 30-40 epochs. Hence, I switched up the architecture, adding another block.
