--- a/_posts/2020-08-19-day025.md
+++ b/_posts/2020-08-19-day025.md
@@ -6,7 +6,7 @@ date: 2020-08-19 21:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-Today's work is a continuation of my CNN model for the **Multi-Type Aircraft of Remote Sensing Images (MTARSI)** dataset.
+Today's work is a continuation of my CNN model for the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset.
 
 ## Results from Model 1
 I trained Model 1 overnight, and the results are as shown below. It looks like the model could do with a little more training.
