--- a/_posts/2020-08-21-day027.md
+++ b/_posts/2020-08-21-day027.md
@@ -6,7 +6,7 @@ date: 2020-08-21 22:00:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-Today's work is a continuation of my CNN model for the **Multi-Type Aircraft of Remote Sensing Images (MTARSI)** dataset.
+Today's work is a continuation of my CNN model for the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset.
 
 ## New Testing Approach
 
