--- a/_posts/2020-08-22-day028.md
+++ b/_posts/2020-08-22-day028.md
@@ -6,7 +6,7 @@ date: 2020-08-22 20:30:00 +0800
 background: '/img/posts/ml.jpg'
 ---
 
-Today's work is a continuation of my CNN model for the **Multi-Type Aircraft of Remote Sensing Images (MTARSI)** dataset.
+Today's work is a continuation of my CNN model for the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset.
 
 ## Results from 8 Variants of CCCNN-10
 I ran 8 new models overnight. See the table below for the variations and the results:
