Add Day 29 post

--- a/_posts/2020-08-23-day029.md
+++ b/_posts/2020-08-23-day029.md
@@ -8,3 +8,57 @@ background: '/img/posts/ml.jpg'
 
 Today's work is a continuation of my CNN model for the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset.
 
+## Major Setback
+As I started writing a post on the MTARSI dataset, I realised two big mistakes I made.
+
+### Incorrect Labels
+As I was collecting sample images to show the 22 classes, I realised that some aircraft were **labelled wrongly**. It was my failure to check the images for this project, because I wrongly assumed that academics who [employed "specialists"]((https://zenodo.org/record/3464319#.X0IjpcgzaUk)) would ensure that the labels were assigned correctly. The fundamental mistakes were as such:
+
+* Mistaking civilian airlines (including the 747) for the C-17, C-5, and KC-10
+* Confusing the C-17 and the C-5
+* Confusing the C-135 with both the C-17 and C-5
+* Classifying all aircraft with tail-mounted engines as the C-21
+* Labelled E-2s and E-3s
+* Twin-engine propeller aircraft were classified as U-2s
+* A-26s were...not A-26s at all
+* P-63s were...not P-63s at all
+
+Hence, I did the following:
+
+* Manually re-labelled C-17s, C-5s, KC-10s, and C-135s
+* Re-classified C-21s as **Private Jets**
+* Re-classified "U-2s" as **Twin Turboprops**
+* Combined "A-26s" with "P-63s" in a new category: **Light Aircraft**
+* Removed E-2s
+
+### Insufficient Diagnostics
+I realised that although I was collecting validation accuracy, I wasn't tracking the categories the model was doing well on, and which categories the model wasn't good at picking out. I should have saved the confusion matrices and accuracy scores *per class*.
+
+## Restarting the Testing
+Incorporating the changes above and the things I've learned along the way, I've restarted the project, now with 21 classes:
+
+1. A-10
+2. B-1
+3. B-2
+4. B-29
+5. B-52
+6. Boeing
+7. C-5
+8. C-17
+9. C-130
+10. C-135
+11. E-3
+12. F-15
+13. F-16
+14. F-18
+15. F-22
+16. KC-10
+17. Light Aircraft
+18. Private Jet
+19. T-6
+20. T-43
+21. Twin Turboprop
+
+Each model will be repeated 10 times with the same train/test split. Confusion matrices and accuracy (by class) will be saved.
+
+The new Model 1 (using the CCCNN-10 architecture) will be running overnight.
