Update Day 29 post

--- a/_posts/2020-08-23-day029.md
+++ b/_posts/2020-08-23-day029.md
@@ -17,6 +17,7 @@ As I was collecting sample images to show the 22 classes, I realised that some a
 * Mistaking civilian airlines (including the 747) for the C-17, C-5, and KC-10
 * Confusing the C-17 and the C-5
 * Confusing the C-135 with both the C-17 and C-5
+* Confusing the P-3 and the C-130
 * Classifying all aircraft with tail-mounted engines as the C-21
 * Labelled E-2s and E-3s
 * Twin-engine propeller aircraft were classified as U-2s
@@ -28,6 +29,7 @@ Hence, I did the following:
 * Manually re-labelled C-17s, C-5s, KC-10s, and C-135s
 * Re-classified C-21s as **Private Jets**
 * Re-classified "U-2s" as **Twin Turboprops**
+* Created a new category of the P-3
 * Combined "A-26s" with "P-63s" in a new category: **Light Aircraft**
 * Removed E-2s
 
@@ -54,10 +56,11 @@ Incorporating the changes above and the things I've learned along the way, I've 
 15. F-22
 16. KC-10
 17. Light Aircraft
-18. Private Jet
-19. T-6
-20. T-43
-21. Twin Turboprop
+18. P-3
+19. Private Jet
+20. T-6
+21. T-43
+22. Twin Turboprop
 
 Each model will be repeated 10 times with the same train/test split. Confusion matrices and accuracy (by class) will be saved.
 
