Update Day 29 post; add Day 30 post

--- a/_posts/2020-08-23-day029.md
+++ b/_posts/2020-08-23-day029.md
@@ -77,7 +77,7 @@ Somehow, having incorrectly-labelled images helped the model to learn better. On
 
 Therefore, the first course of action was to feed class weights to the model. While these helped the model to move past predicting "Boeing" for all validation samples, the bias was very high, with accuracy at 4-5%.
 
-I decided to check the results of each iteration. After inspecting the confusion matrix for the first iteration of M1, I discovered that the strategy was to predict everything as an E-3, which comprises **4.5%** of the data. In the second iteration, the strategy was to predict everything as a Private Jet. Clearly, something is wrong with the model, and I'll have to work through the potential problems above. I'll do this tomorrow.
+I decided to check the results of each iteration. After inspecting the confusion matrix for the first iteration of M1, I discovered that the strategy was to predict everything as an E-3, which comprises **4.5%** of the data. In the second iteration, the strategy was to predict everything as a Private Jet. Clearly, something is wrong with the model, and I'll have to work through the potential problems above.
 
 ## Summary of Key Learning Pointers
 
