--- a/_posts/2020-08-24-day030.md
+++ b/_posts/2020-08-24-day030.md
@@ -24,4 +24,50 @@ After address S/N 6, I experimented with the other problems. I found three issue
 2. The model was underfitted due to the dropout layer in the top block.
 3. Model complexity was too low.
 
-I resolved the first two of these three issues by lowering the learning rate to 0.00001 and removing the dropout layer, and ran Model 1 (CCCNN-10 architecture). Accuracy was about 47-50%. I'll increase the model complexity tomorrow.
+I resolved the first two of these three issues by lowering the learning rate to 0.00001 and removing the dropout layer, and ran Model 1 (see below) with just 5 repeats to facilitate more rapid testing of architectures.
+
+```
+Model: "model1"
+_________________________________________________________________
+Layer (type)                 Output Shape              Param #   
+=================================================================
+conv2d_40 (Conv2D)           (None, 32, 32, 32)        896       
+_________________________________________________________________
+max_pooling2d_40 (MaxPooling (None, 16, 16, 32)        0         
+_________________________________________________________________
+batch_normalization_36 (Batc (None, 16, 16, 32)        128       
+_________________________________________________________________
+conv2d_41 (Conv2D)           (None, 16, 16, 64)        18496     
+_________________________________________________________________
+max_pooling2d_41 (MaxPooling (None, 8, 8, 64)          0         
+_________________________________________________________________
+batch_normalization_37 (Batc (None, 8, 8, 64)          256       
+_________________________________________________________________
+conv2d_42 (Conv2D)           (None, 8, 8, 64)          36928     
+_________________________________________________________________
+max_pooling2d_42 (MaxPooling (None, 4, 4, 64)          0         
+_________________________________________________________________
+batch_normalization_38 (Batc (None, 4, 4, 64)          256       
+_________________________________________________________________
+conv2d_43 (Conv2D)           (None, 4, 4, 64)          36928     
+_________________________________________________________________
+max_pooling2d_43 (MaxPooling (None, 2, 2, 64)          0         
+_________________________________________________________________
+batch_normalization_39 (Batc (None, 2, 2, 64)          256       
+_________________________________________________________________
+flatten_10 (Flatten)         (None, 256)               0         
+_________________________________________________________________
+dense_20 (Dense)             (None, 128)               32896     
+_________________________________________________________________
+dense_21 (Dense)             (None, 21)                2709      
+=================================================================
+Total params: 129,749
+Trainable params: 129,301
+Non-trainable params: 448
+```
+
+The average accuracy across 5 repeats was about 43%:
+
+<img src="/365DaysOfDS/img/posts/day030-01.png" style='margin-left: auto; margin-right: auto; display: block;'>
+
+We'll need to test if increasing model complexity can improve the accuracy. I'll do this tomorrow.
