Update Day 32 post

--- a/_posts/2020-08-26-day032.md
+++ b/_posts/2020-08-26-day032.md
@@ -21,7 +21,7 @@ Accuracy for both models improved, and there was probably room for improvement:
 <img src="/365DaysOfDS/img/posts/day032-02.png" style='margin-left: auto; margin-right: auto; display: block;'>
 
 ## Another Mistake!
-I found yet another mistake in my code. I was effectively training all my models using the base architecture (CCCNN-10) because I had an extra argument in my training function.
+I found yet another mistake in my code. I was effectively training all my models using the base architecture (CCCNN-10) because I had an extra argument in my training function: the `folder` argument. This was swallowing up the parameters I was setting for the Conv blocks.
 
 ```py
 def test_model(mdl_id, new_mdl_name, folder, conv_layers=[[32], [64], [64], [64]], top_layers=[[32]]):
