Update Day 34 post

--- a/_posts/2020-08-28-day034.md
+++ b/_posts/2020-08-28-day034.md
@@ -63,3 +63,17 @@ Adjustments:
 
 Observations:
 * Accuracy: 85-86%
+
+#### Iteration 17
+Adjustments:
+* Lowered the regularisation parameter to 0.005 (0.5x the default)
+
+Observations:
+* Accuracy: 87%
+
+#### Iteration 18
+Adjustments:
+* Lowered the regularisation parameter to 0.001 (0.1x the default)
+
+Observations:
+* Accuracy: 86-87%
