--- a/_posts/2020-08-31-day037.md
+++ b/_posts/2020-08-31-day037.md
@@ -8,6 +8,10 @@ background: '/img/posts/ml.jpg'
 
 Today's work was on my blog post the CNN model on the **Multi-Type Aircraft Remote Sensing Images (MTARSI)** dataset.
 
-I finished up the sections for the final model and conclusion. I also added some new analysis on the predicted probabilities from the models.
+I finished up the sections for the final model and conclusion. I also added some new analysis on the predicted probabilities from the models. A draft is available [here](https://chrischow.github.io/dataandstuff/drafts/2020-09-05-deep-learning-for-aircraft-recognition/). To see the images, you'll need to run the following command in the browser console:
+
+```js
+document.body.innerHTML = document.body.innerHTML.replace(/\.\.\//g, "\.\.\/\.\.\/")
+```
 
 Will continue to fine-tune the post and start on the next post tomorrow.
