Add Day 41 post

--- a/_posts/2020-09-04-day041.md
+++ b/_posts/2020-09-04-day041.md
@@ -44,3 +44,6 @@ Adjustments:
 
 Observations:
 * Accuracy: 90%
+
+## Blog Post
+I also spent a bit of time finalising my blog post. It's ready to launch tomorrow!
