Update Day 46 post

--- a/_posts/2020-09-09-day046.md
+++ b/_posts/2020-09-09-day046.md
@@ -78,6 +78,7 @@ Today is the first day I'm taking a break from coding. I'll be doing a summarisi
 ### Error Analysis: Look at Dev Set Examples to Evaluate Ideas
 * Error analysis: the process of examining dev set examples that your algorithm misclassified, so that you can understand the underlying causes of the errors
 * Estimate the maximum possible improvement from a potential idea (e.g. implementing something to predict a specific class correctly will lower the error by only 5 percentage points)
+* Objective is to eliminate categories of errors
 
 ### Evaluate Multiple Ideas in Parallel
 * Start with enumerating potential ideas in columns
