Update Day 49 post

--- a/_posts/2020-09-12-day049.md
+++ b/_posts/2020-09-12-day049.md
@@ -21,4 +21,7 @@ Adjustments:
 * Unfroze blocks 4 and 5
 
 Observations:
-* Accuracy: *93%*
+* Accuracy: 93%
+* Loss of 0.6595 was higher than having only blocks 6-14 trained
+
+Since accuracy improved only marginally, while loss has decreased, I'm stopping here for Xception.
