Update Day 49 post

--- a/_posts/2020-09-12-day049.md
+++ b/_posts/2020-09-12-day049.md
@@ -22,6 +22,6 @@ Adjustments:
 
 Observations:
 * Accuracy: 93%
-* Loss of 0.6595 was higher than having only blocks 6-14 trained
+* Loss of 0.6595 was higher than having only blocks 8-14 trained
 
-Since accuracy improved only marginally, while loss has decreased, I'm stopping here for Xception.
+Since accuracy improved only marginally, while loss has decreased, I'm stopping here for Xception. The best model was with blocks 8-14 trained, using images of size 140x140.
