Update Day 54 post

--- a/_posts/2020-09-17-day054.md
+++ b/_posts/2020-09-17-day054.md
@@ -22,4 +22,4 @@ Adjustments:
 Observations:
 * Accuracy: 93%
 
-The best ResNet50 model involved training all 3 blocks (10 Conv layers) in Conv5. I will take that as the optimal model and move on to 
+The best ResNet50 model involved training all 3 blocks (10 Conv layers) in Conv5. I will take that as the optimal model and move on to InceptionResNet V2.
