Update Day 59 post

--- a/_posts/2020-09-22-day059.md
+++ b/_posts/2020-09-22-day059.md
@@ -3,7 +3,7 @@ layout: post
 title: "Day 59: Python Flask"
 subtitle: "Python Web Apps"
 date: 2020-09-22 22:00:00 +0800
-background: '/img/posts/webdev.png'
+background: '/img/posts/webdev.jpg'
 ---
 
 I'm taking a break from image classification again. I haven't been learning anything new, just repeating the same process of tweaking CNN parameters, interpreting results, and updating the model to improve the model accuracy.
