Add backlog of posts

--- a/_posts/2020-09-21-day058.md
+++ b/_posts/2020-09-21-day058.md
@@ -3,7 +3,7 @@ layout: post
 title: "Day 58: Excel VBA"
 subtitle: "Automating Documentation"
 date: 2020-09-21 22:00:00 +0800
-background: '/img/posts/ml.jpg'
+background: '/img/posts/automation.jpg'
 ---
 
 I took a break from the MTARSI project today to focus on something related to my actual work. I'm currently writing policy for data governance, and figured that policies could be more easily accessed if there was metadata on each policy.
