--- a/_posts/2020-09-30-day067.md
+++ b/_posts/2020-09-30-day067.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Day 67: Excel VBA"
-subtitle: "Automating Scheduling"
+title: "Day 67: Python Flask"
+subtitle: "Python Web Apps"
 date: 2020-09-30 22:00:00 +0800
 background: '/img/posts/webdev.jpg'
 ---
