Edit images' width

--- a/_posts/2020-09-22-day059.md
+++ b/_posts/2020-09-22-day059.md
@@ -15,8 +15,8 @@ This year, I actually set some private OKRs for personal development, but I fail
 
 Today, I created the basic structure for the app, including the `app.py` main file, a Users model for logging in, and a simple WTForm for registration and logging in. I also summarised the rules for writing OKRs from the book, [Measure What Matters](https://www.goodreads.com/book/show/39286958-measure-what-matters). Here are the screenshots:
 
-<img src="/365DaysOfDS/img/posts/day059-01.png" width="500" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day059-01.png" width="100%" style='margin-left: auto; margin-right: auto; display: block;'>
 
-<img src="/365DaysOfDS/img/posts/day059-02.png" width="500" style='margin-left: auto; margin-right: auto; display: block;'>
+<img src="/365DaysOfDS/img/posts/day059-02.png" width="100%" style='margin-left: auto; margin-right: auto; display: block;'>
 
 Will work on the database for OKRs tomorrow.
