--- a/_posts/2020-09-30-day067.md
+++ b/_posts/2020-09-30-day067.md
@@ -25,5 +25,5 @@ My second objective today was to implement the time vs. progress chart for the d
 
 This time, I made it work by referencing [this post](https://www.patricksoftwareblog.com/creating-charts-with-chart-js-in-a-flask-application/). The chart looks great and can automatically resize with the panel I put it in.
 
-<img src="/365DaysOfDS/img/posts/day067-01.png" style='margin-left: auto; margin-right: auto; display: block;' width="500">
+<img src="/365DaysOfDS/img/posts/day067-01.png" style='margin-left: auto; margin-right: auto; display: block;' width="100%">
 
