--- a/_posts/2020-10-02-day069.md
+++ b/_posts/2020-10-02-day069.md
@@ -21,8 +21,8 @@ Today, I resumed work on OKReadyGo. Here's a recap of the wishlist:
 ## Key Results
 I created a new feature where the user can click on the date and a modal will pop up with the activity chart. I haven't completed the activity chart itself, but the modal works!
 
-<img src="/365DaysOfDS/img/posts/day069-01.png" style='margin-left: auto; margin-right: auto; display: block;' width="500">
+<img src="/365DaysOfDS/img/posts/day069-01.png" style='margin-left: auto; margin-right: auto; display: block;' width="100%">
 
 I improved the design for the Manage page. The Objective cards now turn to a different colour to indicate that the cards have been expanded. I also added a scale transform when hovering over each Objective and KR card.
 
-<img src="/365DaysOfDS/img/posts/day069-02.png" style='margin-left: auto; margin-right: auto; display: block;' width="500">
+<img src="/365DaysOfDS/img/posts/day069-02.png" style='margin-left: auto; margin-right: auto; display: block;' width="100%">
