--- a/_posts/2020-10-01-day068.md
+++ b/_posts/2020-10-01-day068.md
@@ -21,4 +21,4 @@ Today, I resumed work on OKReadyGo. Here's a recap of the wishlist:
 ## Key Results
 Not much progress today. I focused on the design for the detailed OKR display, and converted the default Bootstrap buttons and collapsible cards into panels that are more consistent with the OKReadyGo design. I also re-formatted the Objective tag into some small text at the top left of each box.
 
-<img src="/365DaysOfDS/img/posts/day068-01.png" style='margin-left: auto; margin-right: auto; display: block;' width="500">
+<img src="/365DaysOfDS/img/posts/day068-01.png" style='margin-left: auto; margin-right: auto; display: block;' width="100%">
